<resources>
    <string name="app_name">FitnessLifeManagementSystem</string>
    <string name="successful_login">You have successfully logged in.</string>
    <string name="unsuccessful_login_attempt">Your username or password is incorrect, please try again</string>
    <string name="customer_name">Customer Name      </string>
    <string name="remaining_sessions">Remaining sessions:      </string>
    <string name="add_customers">Add Customers</string>
    <string name="title_activity_login">Sign in</string>
    <string name="payment_successful">Your Payment was successful!</string>
    <string name="ccnumber">Credit Card #</string>
    <string name="expdate">exp date</string>
    <string name="cvv">cvv</string>
    <string name="sig">Sign Here</string>
    <string name="arrow">Customer Details</string>
    <string name="completed">Completed</string>
    <string name="save">Save</string>
    <string name="loggedin">LoggedIn:JDOE</string>
    <string name="logoff">Log Off</string>
    <string name="date">date of session: </string>
    <string name="login_username">Username: </string>
    <string name="login_password">Password: </string>
    <string name="login_button">Log In</string>
    <string name="welcome">Welcome, </string>
    <string name="add_sessions">Add Sessions</string>
    <string name="home">Home</string>
    <string name="add_new_customers">Add new Customers</string>
    <string name="address">address</string>
    <string name="email_address">Email Address</string>
    <string name="savebutton">Save</string>
    <string name="customersname_hint">Enter a customers name</string>
    <string name="View_Data">View Data</string>
    <string name="DELETE">DELETE</string>
    <string name="take_picture">Take Picture</string>


    <!-- Strings related to login -->
    <!-- <string name="username">Email</string>   -->
    <string name="email">Email</string>
    <string name="username">jdoe</string>
    <string name="password">welcome1</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
