<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/fragment"
            android:name="com.bignerdranch.android.fitnesslifemanagementsystem.LoggedInFragment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            tools:layout="@layout/login_fragment"
            android:layout_weight="0.29"/>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add more sessions"
        android:layout_gravity="center"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="04/10/2017"

        android:layout_gravity="right"
        />

    <Space
        android:layout_width="100dp"
        android:layout_height="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sessions wanted"
                android:padding="5dp"

                />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:layout_marginLeft="32dp"
                />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_weight="0.43"
            android:padding="8dp"
            android:text="cost/session  $"
            android:layout_marginLeft="55dp"
            />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total  $"
        android:layout_gravity="left"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Payment Information"
        android:padding="5dp"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Billing Name"
        android:padding="5dp"

        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ccnumber"
                android:padding="18dp"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="18dp"
                android:hint="@string/expdate"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="18dp"
                android:hint="@string/cvv"

                />


        </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="62dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="18dp"
                android:hint="@string/sig"
                />

            <Button
                android:id="@+id/mybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="108dp"
                android:onClick="onClick"
                android:padding="16dp"
                android:text="Submit"/>

        </LinearLayout>








</LinearLayout>
